# mi-imgd

./: .gitignore  README.md  mimgd.py  pyproject.toml  requirements.txt
src/mimgd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
