[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimgd"
version = "0.1.0"
description = "Misskey image downloader"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "playwright",
    "aiohttp"
]

[project.scripts]
mimgd = "mimgd.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mimgd"]

